Diets part 4 - View page for day diets.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -23,6 +23,7 @@ cz.afrosoft.whattoeat.common.none=\u017D\u00E1dn\u00FD
 cz.afrosoft.whattoeat.common.actions=Akce
 cz.afrosoft.whattoeat.common.from=Od
 cz.afrosoft.whattoeat.common.to=Do
+cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
@@ -215,13 +216,12 @@ cz.afrosoft.whattoeat.dietlist.action.view=Z
 cz.afrosoft.whattoeat.dietlist.table.generator=Gener\u00E1tor
 cz.afrosoft.whattoeat.dietview.detail=Popis j\u00EDdeln\u00ED\u010Dku
 cz.afrosoft.whattoeat.dietview.table.day=Den
-cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00EDdan\u011B
-cz.afrosoft.whattoeat.dietview.table.morningSnack=Dopoledn\u00ED sva\u010Dina
-cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ED sva\u010Dina
-cz.afrosoft.whattoeat.dietview.table.soup=Pol\u00E9vka
-cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011Bd
-cz.afrosoft.whattoeat.dietview.table.sideDish=P\u0159\u00EDloha
-cz.afrosoft.whattoeat.dietview.table.dinner=Ve\u010De\u0159e
+cz.afrosoft.whattoeat.dietview.table.breakfasts=Sn\u00EDdan\u011B
+cz.afrosoft.whattoeat.dietview.table.morningSnacks=Dopoledn\u00ED sva\u010Diny
+cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ED sva\u010Diny
+cz.afrosoft.whattoeat.dietview.table.others=Pol\u00E9vka
+cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011Bdy
+cz.afrosoft.whattoeat.dietview.table.dinners=Ve\u010De\u0159e
 
 cz.afrosoft.whattoeat.dietview.action.show=Z
 cz.afrosoft.whattoeat.dietview.action.edit=E
