Part of day diet meal dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -24,6 +24,9 @@ cz.afrosoft.whattoeat.common.actions=Akce
 cz.afrosoft.whattoeat.common.from=Od
 cz.afrosoft.whattoeat.common.to=Do
 cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
+cz.afrosoft.whattoeat.common.recipe=Recept
+cz.afrosoft.whattoeat.common.servings=Porce
+
 #Common end
 #Splash screen
 cz.afrosoft.whattoeat.splashscreen.tip=Tip:
@@ -229,6 +232,4 @@ cz.afrosoft.whattoeat.dietview.action.shopping=N
 
 cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00E1kupn\u00ED l\u00EDstek
 cz.afrosoft.whattoeat.dietview.dialog.meal.title=V\u00FDb\u011Br j\u00EDdla
-cz.afrosoft.whattoeat.dietview.dialog.meal.recipe=Recept:
-cz.afrosoft.whattoeat.dietview.dialog.meal.servings=Porce:
 #Diet list end
