--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -26,6 +26,7 @@ cz.afrosoft.whattoeat.common.to=Do
 cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
 cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
+cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
 
 #Common end
 #Splash screen
@@ -232,4 +233,6 @@ cz.afrosoft.whattoeat.dietview.action.shopping=N
 
 cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00E1kupn\u00ED l\u00EDstek
 cz.afrosoft.whattoeat.dietview.dialog.meal.title=V\u00FDb\u011Br j\u00EDdla
+
+cz.afrosoft.whattoeat.dietview.delete.confirm=Opravdu si p\u0159ejete smazat j\u00EDdeln\u00ED\u010Dek {0}?
 #Diet list end
