--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -175,7 +175,7 @@ cz.afrosoft.whattoeat.diet.generator.input.generate=Generovat
 
 cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00EDdeln\u00ED\u010Dek vygenerov\u00E1n
 cz.afrosoft.whattoeat.diet.generator.none.description=Tento gener\u00E1tor vytv\u00E1\u0159\u00ED pouze pr\u00E1zdn\u00E9 dny. J\u00EDdeln\u00ED\u010Dek si pak u\u017Eivatel sestav\u00ED manu\u00E1ln\u011B.
-cz.afrosoft.whattoeat.diet.generator.random.description=Tento gener\u00E1tor generuje prozat\u00EDm pouze ob\u011Bdy. Generov\u00E1n\u00ED je n\u00E1hodn\u00E9.
+cz.afrosoft.whattoeat.diet.generator.random.description=Tento gener\u00E1tor generuje zadan\u00E9 chody. Generov\u00E1n\u00ED je n\u00E1hodn\u00E9, s t\u00EDm, \u017Ee se sna\u017E\u00ED neopakovat ji\u017E pou\u017Eit\u00E9 recepty.
 cz.afrosoft.whattoeat.diet.generator.random.name=N\u00E1hodn\u00E9 ob\u011Bdy
 #Diet generator end
 
