Added nutrition facts for ingredients.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -27,6 +27,7 @@ cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
 cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
 cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
+cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty
 
 #Common end
 #Splash screen
@@ -152,6 +153,14 @@ cz.afrosoft.whattoeat.ingredient.dialog.conversion.gram=Pr\u016Fm\u011Brn\u00FD 
 cz.afrosoft.whattoeat.ingredient.dialog.conversion.pinch=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na \u0161petku:
 cz.afrosoft.whattoeat.ingredient.dialog.conversion.cofeespoon=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na k\u00E1vovou l\u017Ei\u010Dku:
 cz.afrosoft.whattoeat.ingredient.dialog.conversion.spoon=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na l\u017E\u00EDci:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.energy=Energie [kJ/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.fat=Tuky [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.saturatedFat=Z toho nasycen\u00E9 tuky [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.carbohydrate=Sacharidy [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.sugar=Z toho cukry [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.protein=B\u00EDlkoviny [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.salt=S\u016Fl [g/100g]:
+cz.afrosoft.whattoeat.ingredient.dialog.nutritionFacts.fiber=Vl\u00E1knina [g/100g]:
 
 cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smaz\u00E1n\u00ED ingredience
 cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat tuto ingredienci?
