Diet planning view with nutrition facts.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -27,6 +27,7 @@ cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
 cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
 cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
+cz.afrosoft.whattoeat.common.total=Celkem
 cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty
 
 #Common end
@@ -246,4 +247,14 @@ cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00E1kupn\u00ED l\u00EDs
 cz.afrosoft.whattoeat.dietview.dialog.meal.title=V\u00FDb\u011Br j\u00EDdla
 
 cz.afrosoft.whattoeat.dietview.delete.confirm=Opravdu si p\u0159ejete smazat j\u00EDdeln\u00ED\u010Dek {0}?
+
+cz.afrosoft.whattoeat.dietview.nutritionFacts.meal=J\u00EDdlo
+cz.afrosoft.whattoeat.dietview.nutritionFacts.energy=Energie [kJ]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.fat=Tuky [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.saturatedFat=Z toho nasycen\u00E9 tuky [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.carbohydrate=Sacharidy [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.sugar=Z toho cukry [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.protein=B\u00EDlkoviny [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.salt=S\u016Fl [g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre=Vl\u00E1knina [g]
 #Diet list end
