--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -28,6 +28,7 @@ cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
 cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
 cz.afrosoft.whattoeat.common.total=Celkem
+cz.afrosoft.whattoeat.common.copy=Kop\u00EDrovat
 cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty
 
 #Common end
@@ -235,7 +236,7 @@ cz.afrosoft.whattoeat.dietview.table.day=Den
 cz.afrosoft.whattoeat.dietview.table.breakfasts=Sn\u00EDdan\u011B
 cz.afrosoft.whattoeat.dietview.table.morningSnacks=Dopoledn\u00ED sva\u010Diny
 cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ED sva\u010Diny
-cz.afrosoft.whattoeat.dietview.table.others=Pol\u00E9vka
+cz.afrosoft.whattoeat.dietview.table.others=Ostatn\u00ED
 cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011Bdy
 cz.afrosoft.whattoeat.dietview.table.dinners=Ve\u010De\u0159e
 
@@ -258,3 +259,6 @@ cz.afrosoft.whattoeat.dietview.nutritionFacts.protein=B\u00EDlkoviny [g]
 cz.afrosoft.whattoeat.dietview.nutritionFacts.salt=S\u016Fl [g]
 cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre=Vl\u00E1knina [g]
 #Diet list end
+
+cz.afrosoft.whattoeat.copyDietDialog.title=Kop\u00EDrov\u00E1n\u00ED j\u00EDdeln\u00ED\u010Dku
+cz.afrosoft.whattoeat.copyDietDialog.newName=Jm\u00E9no nov\u00E9 diety
