--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -244,7 +244,7 @@ cz.afrosoft.whattoeat.dietview.action.show=Z
 cz.afrosoft.whattoeat.dietview.action.edit=E
 cz.afrosoft.whattoeat.dietview.action.shopping=N
 
-cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00E1kupn\u00ED l\u00EDstek
+cz.afrosoft.whattoeat.dietview.dialog.shopping.title=N\u00E1kupn\u00ED l\u00EDstek
 cz.afrosoft.whattoeat.dietview.dialog.meal.title=V\u00FDb\u011Br j\u00EDdla
 
 cz.afrosoft.whattoeat.dietview.delete.confirm=Opravdu si p\u0159ejete smazat j\u00EDdeln\u00ED\u010Dek {0}?
