Added Recipe view and filter to meal edit dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -258,6 +258,15 @@ cz.afrosoft.whattoeat.dietview.nutritionFacts.sugar=Z toho cukry [g]
 cz.afrosoft.whattoeat.dietview.nutritionFacts.protein=B\u00EDlkoviny [g]
 cz.afrosoft.whattoeat.dietview.nutritionFacts.salt=S\u016Fl [g]
 cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre=Vl\u00E1knina [g]
+
+cz.afrosoft.whattoeat.dietview.nutritionFacts.energy.short=E[kJ]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.fat.short=T[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.saturatedFat.short=NT[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.carbohydrate.short=SA[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.sugar.short=C[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.protein.short=B[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.salt.short=S[g]
+cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre.short=V[g]
 #Diet list end
 
 cz.afrosoft.whattoeat.copyDietDialog.title=Kop\u00EDrov\u00E1n\u00ED j\u00EDdeln\u00ED\u010Dku
