Diet copy dialog now allows to shift copied diet to specified date.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -271,3 +271,4 @@ cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre.short=V[g]
 
 cz.afrosoft.whattoeat.copyDietDialog.title=Kop\u00EDrov\u00E1n\u00ED j\u00EDdeln\u00ED\u010Dku
 cz.afrosoft.whattoeat.copyDietDialog.newName=Jm\u00E9no nov\u00E9 diety
+cz.afrosoft.whattoeat.copyDietDialog.startDate=Po\u010D\u00E1te\u010Dn\u00ED den
