Added weight for default serving to recipes.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -110,6 +110,7 @@ cz.afrosoft.whattoeat.recipes.add.time.cooking=Doba va\u0159en\u00ED:
 cz.afrosoft.whattoeat.recipes.add.time.total=Celkov\u00E1 doba:
 cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ED:
 cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ED\u010Dov\u00E1 slova:
+cz.afrosoft.whattoeat.recipes.add.ingredient.defaultServingWeight=V\u00E1ha porce [g]:
 cz.afrosoft.whattoeat.recipes.add.ingredient.servings=Po\u010Det porc\u00ED:
 cz.afrosoft.whattoeat.recipes.add.ingredient.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.recipes.add.ingredient.quantity=Mno\u017Estv\u00ED:
