Added new properties to Ingredient. Added inheritance to Ingredient. Created Shop entity. Added new Recipe types. Ingredient can have recipe.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -51,6 +51,7 @@ cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
 #Components
 cz.afrosoft.whattoeat.component.keywordfield.label=Kl\u00ED\u010Dov\u00E1 slova:
+cz.afrosoft.whattoeat.component.shopField.label=Obchody:
 cz.afrosoft.whattoeat.component.durationfields.placeholder=\u010Das v minut\u00E1ch
 #Components end
 
@@ -148,8 +149,14 @@ cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ED\u010Dov\u00E1 s
 cz.afrosoft.whattoeat.ingredient.dialog.title.add=P\u0159id\u00E1n\u00ED ingredience
 cz.afrosoft.whattoeat.ingredient.dialog.title.edit=\u00DAprava ingredience
 cz.afrosoft.whattoeat.ingredient.dialog.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.ingredient.dialog.general=Obecn\u00E1:
+cz.afrosoft.whattoeat.ingredient.dialog.purchasable=Zakoupiteln\u00E1:
+cz.afrosoft.whattoeat.ingredient.dialog.edible=Po\u017Eivateln\u00E1:
+cz.afrosoft.whattoeat.ingredient.dialog.manufacturer=V\u00FDrobce:
 cz.afrosoft.whattoeat.ingredient.dialog.unit=Jednotka:
 cz.afrosoft.whattoeat.ingredient.dialog.price=Cena za jednotku:
+cz.afrosoft.whattoeat.ingredient.dialog.parent=Rodi\u010D:
+cz.afrosoft.whattoeat.ingredient.dialog.recipe=Recept:
 cz.afrosoft.whattoeat.ingredient.dialog.conversion=Konverze jednotek
 cz.afrosoft.whattoeat.ingredient.dialog.conversion.piece=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na kus:
 cz.afrosoft.whattoeat.ingredient.dialog.conversion.gram=Pr\u016Fm\u011Brn\u00FD po\u010Det mililitr\u016F na gram:
@@ -200,6 +207,8 @@ cz.afrosoft.whattoeat.recipeType.mainDish=Hlavn\u00ED j\u00EDdlo
 cz.afrosoft.whattoeat.recipeType.sideDish=P\u0159\u00EDloha
 cz.afrosoft.whattoeat.recipeType.dessert=Dezert
 cz.afrosoft.whattoeat.recipeType.salad=Sal\u00E1t
+cz.afrosoft.whattoeat.recipeType.ingredient=Ingredience
+cz.afrosoft.whattoeat.recipeType.dinner=Ve\u010De\u0159e
 
 cz.afrosoft.whattoeat.taste.sweet=Sladk\u00E9
 cz.afrosoft.whattoeat.taste.salty=Slan\u00E9
