--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -143,6 +143,7 @@ cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.bulb=pali\u010Dka
 cz.afrosoft.whattoeat.ingredients.actions.title=Akce
 
 cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00E9no
+cz.afrosoft.whattoeat.ingredients.table.header.manufacturer=V\u00FDrobce
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
 cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ED\u010Dov\u00E1 slova
