Added user entity. Skeleton for nutrition facts generator.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -23,6 +23,7 @@ cz.afrosoft.whattoeat.common.none=\u017D\u00E1dn\u00FD
 cz.afrosoft.whattoeat.common.actions=Akce
 cz.afrosoft.whattoeat.common.from=Od
 cz.afrosoft.whattoeat.common.to=Do
+cz.afrosoft.whattoeat.common.user=U\u017Eivatel
 cz.afrosoft.whattoeat.common.others=Ostatn\u00ED
 cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
@@ -183,6 +184,7 @@ cz.afrosoft.whattoeat.diet.generator.input.ingredientKey=Jm\u00E9no:
 cz.afrosoft.whattoeat.diet.generator.input.from=Od:
 cz.afrosoft.whattoeat.diet.generator.input.to=Do:
 cz.afrosoft.whattoeat.diet.generator.input.generator=Gener\u00E1tor:
+cz.afrosoft.whattoeat.diet.generator.input.user=U\u017Eivatel:
 cz.afrosoft.whattoeat.diet.generator.input.dishes=Chody:
 cz.afrosoft.whattoeat.diet.generator.input.breakfast=Sn\u00EDdan\u011B:
 cz.afrosoft.whattoeat.diet.generator.input.morningSnack=Dopoledn\u00ED sva\u010Dina:
@@ -197,6 +199,24 @@ cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00EDdeln\u00ED\u
 cz.afrosoft.whattoeat.diet.generator.none.description=Tento gener\u00E1tor vytv\u00E1\u0159\u00ED pouze pr\u00E1zdn\u00E9 dny. J\u00EDdeln\u00ED\u010Dek si pak u\u017Eivatel sestav\u00ED manu\u00E1ln\u011B.
 cz.afrosoft.whattoeat.diet.generator.random.description=Tento gener\u00E1tor generuje zadan\u00E9 chody. Generov\u00E1n\u00ED je n\u00E1hodn\u00E9, s t\u00EDm, \u017Ee se sna\u017E\u00ED neopakovat ji\u017E pou\u017Eit\u00E9 recepty.
 cz.afrosoft.whattoeat.diet.generator.random.name=N\u00E1hodn\u00E9 ob\u011Bdy
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.name=Nutri\u010Dn\u00ED sp\u00E1sa
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.targetAmount=C\u00EDlov\u00E1 hodnota[kJ]|[g]
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.priority=Priorita
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.belowTolerance=Spodn\u00ED tolerance[%]
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.aboveTolerance=Horn\u00ED tolerance[%]
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.energy=Energie
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.fat=Tuky
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.saturatedFat=Nasycen\u00E9 tuky
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.carbohydrate=Sacharidy
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.sugar=Cukry
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.protein=B\u00EDlkoviny
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.salt=S\u016Fl
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.fiber=Vl\u00E1knina
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.filter.breakfast=Filtr sn\u00EDdan\u00ED
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.filter.snack=Filtr sva\u010Din
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.filter.lunch=Filtr ob\u011Bd\u016F
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.filter.afternoonSnack=Filtr odpoledn\u00EDch sva\u010Din
+cz.afrosoft.whattoeat.diet.generator.nutritionSalvation.filter.dinner=Filtr ve\u010De\u0159\u00ED
 #Diet generator end
 
 #Data model
@@ -282,4 +302,5 @@ cz.afrosoft.whattoeat.dietview.nutritionFacts.fibre.short=V[g]
 
 cz.afrosoft.whattoeat.copyDietDialog.title=Kop\u00EDrov\u00E1n\u00ED j\u00EDdeln\u00ED\u010Dku
 cz.afrosoft.whattoeat.copyDietDialog.newName=Jm\u00E9no nov\u00E9 diety
+cz.afrosoft.whattoeat.copyDietDialog.user=Pro u\u017Eivatele
 cz.afrosoft.whattoeat.copyDietDialog.startDate=Po\u010D\u00E1te\u010Dn\u00ED den
