--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -30,6 +30,7 @@ cz.afrosoft.whattoeat.common.servings=Porce
 cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
 cz.afrosoft.whattoeat.common.total=Celkem
 cz.afrosoft.whattoeat.common.copy=Kop\u00EDrovat
+cz.afrosoft.whattoeat.common.ingredient=Ingredience
 cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty
 
 #Common end
@@ -304,3 +305,8 @@ cz.afrosoft.whattoeat.copyDietDialog.title=Kop\u00EDrov\u00E1n\u00ED j\u00EDdeln
 cz.afrosoft.whattoeat.copyDietDialog.newName=Jm\u00E9no nov\u00E9 diety
 cz.afrosoft.whattoeat.copyDietDialog.user=Pro u\u017Eivatele
 cz.afrosoft.whattoeat.copyDietDialog.startDate=Po\u010D\u00E1te\u010Dn\u00ED den
+
+cz.afrosoft.whattoeat.dayDietDialog.amount=Mno\u017Estv\u00ED(g)
+cz.afrosoft.whattoeat.dayDietDialog.eatableName=Recept/Ingredience
+cz.afrosoft.whattoeat.dayDietDialog.illegalIngredientHeader=Nepovolen\u00E1 ingredience
+cz.afrosoft.whattoeat.dayDietDialog.illegalIngredient=Pouze zakoupiteln\u00E9 a po\u017Eivateln\u00E9 ingredience je mo\u017En\u00E9 zapl\u00E1novat do j\u00EDdeln\u00ED\u010Dku
