Updated nutrition generator. Limit to number of visible diets and recipes at startup. Entity for ingredient mapping.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -29,6 +29,8 @@ cz.afrosoft.whattoeat.common.recipe=Recept
 cz.afrosoft.whattoeat.common.servings=Porce
 cz.afrosoft.whattoeat.common.confirm.delete=Potvrzen\u00ED smaz\u00E1n\u00ED
 cz.afrosoft.whattoeat.common.total=Celkem
+cz.afrosoft.whattoeat.common.target=C\u00EDl
+cz.afrosoft.whattoeat.common.delta=Rozd\u00EDl
 cz.afrosoft.whattoeat.common.copy=Kop\u00EDrovat
 cz.afrosoft.whattoeat.common.ingredient=Ingredience
 cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty
