Ingredient filter update.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -312,3 +312,8 @@ cz.afrosoft.whattoeat.dayDietDialog.amount=Mno\u017Estv\u00ED(g)
 cz.afrosoft.whattoeat.dayDietDialog.eatableName=Recept/Ingredience
 cz.afrosoft.whattoeat.dayDietDialog.illegalIngredientHeader=Nepovolen\u00E1 ingredience
 cz.afrosoft.whattoeat.dayDietDialog.illegalIngredient=Pouze zakoupiteln\u00E9 a po\u017Eivateln\u00E9 ingredience je mo\u017En\u00E9 zapl\u00E1novat do j\u00EDdeln\u00ED\u010Dku
+
+cz.afrosoft.whattoeat.boolOption.yes=ano
+cz.afrosoft.whattoeat.boolOption.no=ne
+cz.afrosoft.whattoeat.boolOption.none= - 
+cz.afrosoft.whattoeat.nutritionFacts=V\u00FD\u017Eivov\u00E9 hodnoty 
